[package]
name = "mwc-widgets"
version = "0.1.0"
authors = [
    "Alexander Mescheryakov <freecoder.xx@gmail.com>",
    "Noogen Team <info.noogen@gmail.com>",
]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/noogen-projects/mwc-widgets"
description = "The Material Design Web Components widgets for the Rust"
keywords = ["web", "ui", "mwc", "widgets"]
categories = ["web-programming", "wasm", "gui"]

[dependencies]
